--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 <body>
 <div id="menu">
 <li><a href="#about">About Me</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#photos">My Photos</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#playlist">My Playlist</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#like">Like</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#qrcoder">QR code</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#spa">Q&A</a></li>
+<li><img src="resources/face.png"/></li>
 <li><a href="#contact">Contact Me</a></li>
 </div>
 		  
@@ -31,8 +37,20 @@
 <br/>
 <br/>
 <br/>
-about me
+<h1 class="header"><span>About Me</span></h1>
 <br/>
+<br/>
+<br/>
+<p>
+  <br/>
+  So my name is Squidward. Squidward Tentacles. I live my miserable life in Bikini Bottom<br> next to the 2 neighbors who keep ruining my life every day.<br>
+  I work at The Krusty Krab as a cashier. At work most of the time a sleep,<br> gets annoyed by Spongebob and hate Mr. Krabs 
+  As I'm, I define my self the best Artist this ocean has even seen.<br> I play clarinet and paints but the best part is when i can just relax when Spongebob and Patrick are not around.
+  <br>To your'e surprise, Spongebob and Patrick or either Mr. Krabs, are not the most hated people i know in my life,<br>
+  Squilliam Fancyson is. He thinks he's better than me although i know i play clarinet better than him,<br>
+  paints better than him, and look better than him.<br>
+  <br/>
+</p>
 <br/>
 <br/>
 </section>
@@ -44,20 +62,15 @@ about me
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>The Best of Me</span></h1>
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
+<div class="row">
+  <img class="col" src="resources/happy.png" height="400x" width="400px">
+  <img class="col" src="resources/dancing.png" height="400px" width="400px">
+  <img class="col" src="resources/laugh.jpg" height="400px" width="400px">
+</div>
 </section>
 
 <section id="playlist" class="section">
@@ -70,16 +83,10 @@ my photos
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>My Playlist</span></h1>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
+<iframe style="margin-top: 100px;" width="800px" height="500px" src="https://www.youtube-nocookie.com/embed/E5BzhG_sKUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
 </section>
 
@@ -93,16 +100,10 @@ my playlist
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>Give Me a Like</span></h1>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
+<iframe style="margin-left: 600px; margin-top: 50px;" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FSquidward%2F&width=750&layout=button_count&action=like&size=large&share=true&height=46&appId" width="750" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 <br/>
 </section>
 
@@ -116,16 +117,10 @@ give me a like
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>Scan My Code</span></h1>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
+<img style="margin-top: 100px;" src="resources/qr-code.png" width= 500px height=450px;> 
 <br/>
 </section>
 
@@ -139,16 +134,26 @@ scan my code
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>Q&A</span></h1>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
+<ul style="font-size: 36px;">
+  <li>
+    three main differences between Web 1.0, 2.0 and 3.0:
+    <ol style="font-size: 23px;">
+      <li>Most of the Web 1.0 pages are static. that means that they are Read-Only pages that do not change at all.<br> In Contrast, on Web 2.0 and 3.0 its different. On Web 2.0 most of the web pages are Read-Write<br> while in Web 3.0 the web pages are portable and personal.</li>
+      <li>On Web 1.0 the web is a "company focused". That means all the content on the web was from companies<br> providing that content while the community consume it - one-to-many communication model.<br>However, On Web 2.0 the communication model changed to be "Community-focued"<br> when others can also provide content. On Web 3.0, it transformed to be<br> "Individual-focused" when a lot of the content on the web is personalized for everyone.</li>
+      <li>On Web 1.0 one can only get to a web page by knowing the specific URL address of the page.<br> On Web 2.0 there is a search engine that can find web pages that has been crawled before.<br> Web 3.0 enable a better search result by applying smarter techniques for search.</li>
+    </ol>
+  </li>
+  <li>Use Case for "Recipe for cinnamon cake":
+    <ul style="margin-left: 0;">
+      <li>On Web 1.0 a specific URL address of the relevant content needs to be known.</li>
+      <li>On Web 2.0 we can search "Recipe for a cinnamon cake" and get web pages that the owner of the web page<br> made sure that the words "Recipe", "cinnamon", "cake" are tagged</li>
+      <li>On Web 3.0 the search "Recipe for a connamon cake" in the search engine will get as a result<br> web pages that contain semantic content to the search words by applying advanced techniques</li>
+    </ul>
+  </li>
+</ul>
 <br/>
 </section>
 
@@ -162,6 +167,7 @@ ans
 <br/>
 <br/>
 <br/>
+<h1 class="header"><span>Contact Me</span></h1>
 <br/>
 <br/>
 <br/>
@@ -169,10 +175,21 @@ ans
 <br/>
 <br/>
 <br/>
-contact me
 <br/>
-<br/>
-<br/>
+<form method="post" action="mailto:nivgold@post.bgu.ac.il" enctype="text/plain">
+  <label>Email Address</label>
+  <br>
+  <input type="email" placeholder="example@domain.com" required size="30">
+  <br>
+  <label>Message</label>
+  <br>
+  <textarea id="message" cols="50" rows="10" placeholder="write a message to Squidward" data-emojiable="true"></textarea>
+  <br>
+  <p>😀😁😂😍😘😒😖😜😝😠😡😢😭😱😎</p>
+  <br>
+  <input type="submit" value="Submit">
+  <input type="reset" value="Reset">
+</form>
 </section>
 
 
