--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 <br/>
 <br/>
 <div class="row">
-  <img class="col" src="resources/happy.png" height="400x" width="400px">
-  <img class="col" src="resources/dancing.png" height="400px" width="400px">
-  <img class="col" src="resources/laugh.jpg" height="400px" width="400px">
+  <img class="col" src="resources/happy.png">
+  <img class="col" src="resources/dancing.png">
+  <img class="col" src="resources/laugh.jpg">
 </div>
 </section>
 
@@ -103,7 +103,7 @@
 <h1 class="header"><span>Give Me a Like</span></h1>
 <br/>
 <br/>
-<iframe style="margin-left: 600px; margin-top: 50px;" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FSquidward%2F&width=750&layout=button_count&action=like&size=large&share=true&height=46&appId" width="750" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<iframe style="margin-left: 850px; margin-top: 50px; float: left;" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FSquidward%2F&width=750&layout=button_count&action=like&size=large&share=true&height=46&appId" width="162" height="29" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 <br/>
 </section>
 
@@ -176,14 +176,18 @@
 <br/>
 <br/>
 <br/>
-<form method="post" action="mailto:nivgold@post.bgu.ac.il" enctype="text/plain">
+<form action="mailto:nivgold@post.bgu.ac.il" method="post" enctype="text/plain">
   <label>Email Address</label>
   <br>
-  <input type="email" placeholder="example@domain.com" required size="30">
+  <input type="email" placeholder="example@domain.com" name="email" required size="30">
+  <br>
+  <label>Subject</label>
+  <br>
+  <input type="text" placeholder="Subject" name="subject" required>
   <br>
   <label>Message</label>
   <br>
-  <textarea id="message" cols="50" rows="10" placeholder="write a message to Squidward" data-emojiable="true"></textarea>
+  <textarea cols="50" rows="10" placeholder="write a message to Squidward" name="message" required></textarea>
   <br>
   <p>😀😁😂😍😘😒😖😜😝😠😡😢😭😱😎</p>
   <br>
