--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <li><img src="resources/face.png"/></li>
 <li><a href="#photos">My Photos</a></li>
 <li><img src="resources/face.png"/></li>
-<li><a href="#playlist">My Best Moments</a></li>
+<li><a href="#playlist">The Best Of Me</a></li>
 <li><img src="resources/face.png"/></li>
 <li><a href="#like">Like</a></li>
 <li><img src="resources/face.png"/></li>
@@ -83,7 +83,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="header"><span>My Best Moments</span></h1>
+<h1 class="header"><span>The Best Of Me</span></h1>
 <br/>
 <br/>
 <iframe style="margin-top: 100px;" width="800px" height="500px" src="https://www.youtube-nocookie.com/embed/E5BzhG_sKUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -100,7 +100,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="header"><span>Give Me a Like</span></h1>
+<h1 class="header"><span>Like</span></h1>
 <br/>
 <br/>
 <iframe style="margin-left: 850px; margin-top: 50px; float: left;" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FSquidward%2F&width=750&layout=button_count&action=like&size=large&share=true&height=46&appId" width="162" height="29" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
