upgdate movement and top menu bar

--- a/index.html
+++ b/index.html
@@ -6,27 +6,21 @@
 <body>
 <div id="menu">
 <li><a href="#about">About Me</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#photos">My Photos</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#playlist">The Best Of Me</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#like">Like</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#qrcoder">QR code</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#spa">Q&A</a></li>
-<li><img src="resources/face.png"/></li>
+<img src="resources/face.png"/>
 <li><a href="#contact">Contact Me</a></li>
 </div>
 		  
 <section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <br/>
 <br/>
 <br/>
