--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <br/>
   My name is Squidward. Squidward Tentacles. I live my miserable life in Bikini Bottom<br> next to the 2 neighbors who keep ruining my life every day.<br>
   I work at The Krusty Krab as a cashier. At work most of the time i sleep,<br> gets annoyed by Spongebob and hate Mr. Krabs.
-  As I'm, I define my self as the best Artist this ocean has even seen.<br> I play clarinet and paints but the best part is when i can just relax when Spongebob and Patrick are not around.
+  As I'm, I define my self as the best Artist this ocean has ever seen.<br> I play clarinet and paints but the best part is when i can just relax when Spongebob and Patrick are not around.
   <br>To your'e surprise, Spongebob and Patrick or either Mr. Krabs, are not the most hated people i know in my life,<br>
   Squilliam Fancyson is. He thinks he's better than me although i know i play clarinet better than him,<br>
   paints better than him, and look better than him.<br>
