--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="header"><span>The Best of Me</span></h1>
+<h1 class="header"><span>My Photos</span></h1>
 <br/>
 <br/>
 <br/>
